Added some Style. Not too fancy

--- a/investingguideandroidui/app/src/main/res/values/colors.xml
+++ b/investingguideandroidui/app/src/main/res/values/colors.xml
@@ -7,9 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="cardbackground">#91DDF7</color>
+    <color name="card_background_color">#91DDF7</color>
     <color name="grey_300">#E0E0E0</color>
     <color name="color_white">#FEFEFE</color>
+    <color name="financial_green_200">#0C9811</color>
+    <color name="financial_green_500">#035C06</color>
+    <color name="financial_green_700">#024904</color>
 </resources>
 
 
