--- a/investingguideandroidui/app/src/main/res/layout/activity_main.xml
+++ b/investingguideandroidui/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,12 @@
 
     <Button
         android:id="@+id/viewSecurities"
-        android:layout_width="250dp"
-        android:layout_height="82dp"
-        android:backgroundTint="@color/purple_200"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/financial_green_200"
         android:gravity="center"
-        android:text="View Current Treasury Bill Auctions"
+        android:text="View Current Treasury Security Auctions"
+        android:shadowRadius="@integer/material_motion_duration_short_1"
         tools:layout_editor_absoluteX="89dp"
         tools:layout_editor_absoluteY="347dp"
         app:layout_constraintBottom_toBottomOf="parent"
