--- a/investingguideandroidui/app/src/main/res/layout/security_card_view.xml
+++ b/investingguideandroidui/app/src/main/res/layout/security_card_view.xml
@@ -1,19 +1,18 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/linearLayoutSecurity"
+    android:id="@+id/relative_layout_security"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:tag="cards main container">
+    android:tag="cards main container"
+    >
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
-        android:layout_width="match_parent"
+        android:theme="@style/SecurityCardView"
         android:layout_height="wrap_content"
-        card_view:cardBackgroundColor="@color/color_white"
-        card_view:cardCornerRadius="12dp"
-        card_view:cardElevation="8dp"
-        card_view:cardUseCompatPadding="true">
+        android:layout_width="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,70 +38,37 @@
                 <TableRow>
 
                     <TextView
-                        android:id="@+id/cusipLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="left"
-                        android:layout_marginTop="10dp"
-                        android:text="CUSIP"
-                        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-                    <TextView
                         android:id="@+id/cusip"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
                         android:layout_marginTop="10dp"
-                        android:text="9HD45G"
-                        android:textAppearance="?android:attr/textAppearanceMedium" />
-
+                        android:text=""
+                        />
 
                 </TableRow>
-
                 <TableRow>
-
-                    <TextView
-                        android:id="@+id/issueDateLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="left"
-                        android:layout_marginTop="10dp"
-                        android:text="Date Issued : "
-                        android:textAppearance="?android:attr/textAppearanceLarge" />
-
                     <TextView
                         android:id="@+id/issueDate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
                         android:layout_marginTop="10dp"
-                        android:text="2023-01-01"
-                        android:textAppearance="?android:attr/textAppearanceMedium" />
+                        android:text=""
+                         />
                 </TableRow>
-
                 <TableRow>
-
-                    <TextView
-                        android:id="@+id/pricePer100Label"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="left"
-                        android:layout_marginTop="10dp"
-                        android:text="Price Per 100"
-                        android:textAppearance="?android:attr/textAppearanceLarge" />
-
                     <TextView
                         android:id="@+id/pricePer100"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
                         android:layout_marginTop="10dp"
-                        android:text="99.65"
+                        android:text=""
                         android:textAppearance="?android:attr/textAppearanceMedium" />
                 </TableRow>
             </TableLayout>
         </LinearLayout>
-
     </androidx.cardview.widget.CardView>
 
-</LinearLayout>
+</RelativeLayout>
