--- a/investingguideandroidui/app/src/main/res/values/themes.xml
+++ b/investingguideandroidui/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Investingguideandroidui" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Investingguideandroidui" parent="Theme.Material3.DayNight">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/financial_green_200</item>
+        <item name="colorPrimaryVariant">@color/financial_green_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -12,5 +12,17 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+    <style name="SecurityCardView" >
+        <item name="cornerRadius">12dp</item>
+        <item name="cardPreventCornerOverlap">true</item>
+        <item name="cardElevation">8dp</item>
+        <item name="useCompatPadding">true</item>
+        <item name="cardBackgroundColor">@color/card_background_color</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">sans-serif-thick</item>
+        <item name="android:textStyle">normal</item>
+
     </style>
 </resources>
