--- a/investingguideandroidui/app/src/main/res/layout/security_card_view.xml
+++ b/investingguideandroidui/app/src/main/res/layout/security_card_view.xml
@@ -20,12 +20,12 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/securityTypeImage"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:id="@+id/security_type_image"
+                android:layout_width="5in"
+                android:layout_height="5in"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:src="@drawable/ic_launcher_foreground"
+                android:src="@drawable/resource_default"
                 android:tag="security_type_tag" />
 
             <TableLayout
