--- a/investingguideandroidui/app/src/main/res/layout/activity_main.xml
+++ b/investingguideandroidui/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,13 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/viewSecurities"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/view_securities_button"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
         android:backgroundTint="@color/financial_green_200"
         android:gravity="center"
         android:text="View Current Treasury Security Auctions"
-        android:shadowRadius="@integer/material_motion_duration_short_1"
+        android:shadowRadius="@integer/material_motion_duration_long_1"
         tools:layout_editor_absoluteX="89dp"
         tools:layout_editor_absoluteY="347dp"
         app:layout_constraintBottom_toBottomOf="parent"
