--- a/investingguideandroidui/app/src/main/res/layout/security_card_view.xml
+++ b/investingguideandroidui/app/src/main/res/layout/security_card_view.xml
@@ -21,29 +21,31 @@
 
             <ImageView
                 android:id="@+id/security_type_image"
-                android:layout_width="5in"
-                android:layout_height="5in"
+                android:maxWidth="30dp"
+                android:maxHeight="50dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:src="@drawable/resource_default"
-                android:tag="security_type_tag" />
+                android:tag="security_type_tag"
+                android:layout_height="10dp"
+                android:layout_width="10dp"/>
 
             <TableLayout
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:layout_weight="2"
                 android:orientation="horizontal">
 
                 <TableRow>
-
                     <TextView
                         android:id="@+id/cusip"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="right"
+                        android:layout_gravity="center"
                         android:layout_marginTop="10dp"
                         android:text=""
+                        android:textAppearance="?android:attr/textAppearanceMedium"
                         />
 
                 </TableRow>
@@ -52,9 +54,10 @@
                         android:id="@+id/issueDate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="right"
+                        android:layout_gravity="center"
                         android:layout_marginTop="10dp"
                         android:text=""
+                        android:textAppearance="?android:attr/textAppearanceMedium"
                          />
                 </TableRow>
                 <TableRow>
@@ -62,7 +65,7 @@
                         android:id="@+id/pricePer100"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="right"
+                        android:layout_gravity="center"
                         android:layout_marginTop="10dp"
                         android:text=""
                         android:textAppearance="?android:attr/textAppearanceMedium" />
