--- a/investingguideandroidui/app/src/main/res/values/themes.xml
+++ b/investingguideandroidui/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Investingguideandroidui" parent="Theme.Material3.DayNight">
+    <style name="Theme.Investingguideandroidui" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/financial_green_200</item>
         <item name="colorPrimaryVariant">@color/financial_green_700</item>
