--- a/investingguideandroidui/app/src/main/res/layout/security_card_view.xml
+++ b/investingguideandroidui/app/src/main/res/layout/security_card_view.xml
@@ -12,66 +12,71 @@
         android:id="@+id/card_view"
         android:theme="@style/SecurityCardView"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content">
+        android:layout_width="match_parent">
 
-        <LinearLayout
+        <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/security_type_image"
-                android:maxWidth="30dp"
-                android:maxHeight="50dp"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:src="@drawable/resource_default"
-                android:tag="security_type_tag"
-                android:layout_height="10dp"
-                android:layout_width="10dp"/>
 
-            <TableLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:layout_weight="2"
-                android:orientation="horizontal">
+            <TableRow>
+                <ImageView
+                    android:id="@+id/security_type_image"
+                    android:maxHeight="298px"
+                    android:maxWidth="298px"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/resource_default"
+                    android:tag="security_type_tag"
+                    android:layout_height="298px"
+                    android:layout_width="298px"/>
 
                 <TableRow>
-                    <TextView
-                        android:id="@+id/cusip"
+                    <TableLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="10dp"
-                        android:text=""
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        />
+                        android:layout_marginTop="12dp"
+                        android:layout_weight="2"
+                        android:orientation="horizontal">
 
+                        <TableRow>
+                            <TextView
+                                android:id="@+id/cusip"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="10dp"
+                                android:text=""
+                                android:textAppearance="?android:attr/textAppearanceMedium"
+                                />
+
+                        </TableRow>
+                        <TableRow>
+                            <TextView
+                                android:id="@+id/issueDate"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="10dp"
+                                android:text=""
+                                android:textAppearance="?android:attr/textAppearanceMedium"
+                                 />
+                        </TableRow>
+                        <TableRow>
+                            <TextView
+                                android:id="@+id/pricePer100"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="10dp"
+                                android:text=""
+                                android:textAppearance="?android:attr/textAppearanceMedium" />
+                        </TableRow>
+                    </TableLayout>
                 </TableRow>
-                <TableRow>
-                    <TextView
-                        android:id="@+id/issueDate"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="10dp"
-                        android:text=""
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                         />
-                </TableRow>
-                <TableRow>
-                    <TextView
-                        android:id="@+id/pricePer100"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="10dp"
-                        android:text=""
-                        android:textAppearance="?android:attr/textAppearanceMedium" />
-                </TableRow>
-            </TableLayout>
-        </LinearLayout>
+            </TableRow>
+        </TableLayout>
     </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
