almost done, just minor readjustment required

--- a/investingguideandroidui/app/src/main/res/layout/activity_main.xml
+++ b/investingguideandroidui/app/src/main/res/layout/activity_main.xml
@@ -18,9 +18,8 @@
             android:id="@+id/security_tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/pages"
-            android:layout_centerInParent="true"
             android:layout_marginTop="100dp"
+            app:tabMode="scrollable"
             tools:layout_editor_absoluteX="8dp"
             app:tabBackground="@color/security_tab_background"
             app:tabSelectedTextColor="@color/financial_green_700"
