Added filtered tabs to view just securities for each specific tab

--- a/investingguideandroidui/app/src/main/res/layout/fragment_bill.xml
+++ b/investingguideandroidui/app/src/main/res/layout/fragment_bill.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textAlignment="center"
-        android:text="Bill Fragment"
+        android:text="Bill"
         android:textSize="16sp"
         android:textStyle="bold"/>
 
