--- a/investingguideandroidui/app/src/main/res/layout/fragment_bond.xml
+++ b/investingguideandroidui/app/src/main/res/layout/fragment_bond.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textAlignment="center"
-        android:text="Bond Fragment"
+        android:text="Bond"
         android:textSize="16sp"
         android:textStyle="bold"/>
 
