--- a/investingguideandroidui/app/src/main/res/layout/fragment_bill.xml
+++ b/investingguideandroidui/app/src/main/res/layout/fragment_bill.xml
@@ -3,9 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.jjoe64.graphview.GraphView
+        android:id="@+id/billGraphview"
+        android:layout_width="match_parent"
+        android:layout_height="160dp" />
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:textAlignment="center"
         android:text="Bill"
         android:textSize="16sp"
