--- a/investingguideandroidui/app/src/main/res/layout/fragment_note.xml
+++ b/investingguideandroidui/app/src/main/res/layout/fragment_note.xml
@@ -2,9 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <com.jjoe64.graphview.GraphView
+        android:id="@+id/noteGraphview"
+        android:layout_width="match_parent"
+        android:layout_height="160dp" />
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:textAlignment="center"
         android:text="NOTES"
         android:textSize="16sp"
