--- a/investingguideandroidui/app/src/main/res/layout/fragment_note.xml
+++ b/investingguideandroidui/app/src/main/res/layout/fragment_note.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textAlignment="center"
-        android:text="NOTES"
+        android:text="@string/no_notes_label"
         android:textSize="16sp"
         android:textStyle="bold"/>
 
