--- a/investingguideandroidui/app/src/main/res/layout/securities_view_main_activity.xml
+++ b/investingguideandroidui/app/src/main/res/layout/securities_view_main_activity.xml
@@ -13,8 +13,8 @@
 
         <Button
             android:id="@+id/securities_return_main_button_top"
-            android:layout_height="80dp"
-            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
             android:text="@string/return_main_activity_button_label"
             />
     </LinearLayout>
@@ -44,19 +44,6 @@
 
         </androidx.viewpager.widget.ViewPager>
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tabs_and_content">
-
-        <Button
-            android:id="@+id/securities_return_main_button_bottom"
-            android:layout_height="80dp"
-            android:layout_width="wrap_content"
-            android:text="@string/return_main_activity_button_label"
-            />
-    </LinearLayout>
-
 
 </RelativeLayout>
 
