--- a/investingguideandroidui/app/src/main/res/values/themes.xml
+++ b/investingguideandroidui/app/src/main/res/values/themes.xml
@@ -14,12 +14,12 @@
         <!-- Customize your theme here. -->
     </style>
     <style name="SecurityCardView" >
-        <item name="cornerRadius">20dp</item>
+        <item name="cornerRadius">20sp</item>
         <item name="cardPreventCornerOverlap">true</item>
-        <item name="cardElevation">20dp</item>
+        <item name="cardElevation">20sp</item>
         <item name="useCompatPadding">true</item>
         <item name="cardBackgroundColor">@color/cardview_dark_background</item>
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">@dimen/left_right_margin_column</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">sans-serif-thick</item>
         <item name="android:textStyle">normal</item>
