--- a/investingguideandroidui/app/src/main/res/layout/fragment_bond.xml
+++ b/investingguideandroidui/app/src/main/res/layout/fragment_bond.xml
@@ -3,11 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/no_bond_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textAlignment="center"
         android:text="Bond"
-        android:textSize="16sp"
+        android:textSize="@dimen/standard_text_sie"
         android:textStyle="bold"/>
 
 </FrameLayout>
