--- a/investingguideandroidui/app/src/main/res/layout/fragment_frn.xml
+++ b/investingguideandroidui/app/src/main/res/layout/fragment_frn.xml
@@ -3,11 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/no_frn_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textAlignment="center"
         android:text="@string/no_frn_label"
-        android:textSize="46sp"
+        android:textSize="@dimen/medium_text_sie"
         android:textStyle="bold"/>
 
 </FrameLayout>
