--- a/investingguideandroidui/app/src/main/res/layout/security_card_view.xml
+++ b/investingguideandroidui/app/src/main/res/layout/security_card_view.xml
@@ -1,6 +1,5 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/relative_layout_security"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,12 +11,12 @@
         android:id="@+id/card_view"
         android:theme="@style/SecurityCardView"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_width="310dp">
+        android:layout_marginLeft="@dimen/left_right_margin_column"
+        android:layout_marginRight="@dimen/left_right_margin_column"
+        android:layout_width="@dimen/whole_screen_width">
 
         <TableLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TableRow>
@@ -26,7 +25,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginTop="3dp"
+                    android:layout_marginTop="@dimen/inter_row_margin_top"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     />
@@ -37,7 +36,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginTop="3dp"
+                    android:layout_marginTop="@dimen/inter_row_margin_top"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     />
@@ -48,7 +47,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginTop="3dp"
+                    android:layout_marginTop="@dimen/inter_row_margin_top"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceMedium" />
             </TableRow>
