--- a/investingguideandroidui/app/src/main/res/values/dimens.xml
+++ b/investingguideandroidui/app/src/main/res/values/dimens.xml
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">40dp</dimen>
-    <dimen name="tab_vertical_margin">400dp</dimen>
+    <dimen name="activity_horizontal_margin">16sp</dimen>
+    <dimen name="activity_vertical_margin">40sp</dimen>
+    <dimen name="tab_vertical_margin">400sp</dimen>
     <dimen name="search_menu_button_width">150sp</dimen>
     <dimen name="search_menu_button_height">70sp</dimen>
-    <dimen name="datePickerLabelWidth">150dp</dimen>
+    <dimen name="datePickerLabelWidth">150sp</dimen>
+    <dimen name="inter_row_margin_top">5sp</dimen>
+    <dimen name="left_right_margin_column">5sp</dimen>
+
+    <dimen name="standard_text_sie">25sp</dimen>
+    <dimen name="medium_text_sie">36sp</dimen>
+    <dimen name="large_text_sie">46sp</dimen>
+    <dimen name="button_text_sie">25sp</dimen>
+    <dimen name="whole_screen_width">0dp</dimen>
+    <dimen name="whole_available_width">0dp</dimen>
+    <dimen name="whole_available_height">0dp</dimen>
+    <dimen name="available_unit_weight">1.0</dimen>
+
+
 </resources>
 
 
